<resources>
    <string name="app_name">CMPT276 Hydrogen Project</string>
    <string name="coinFlipBtnText">Flip a coin</string>
    <string name="timeoutBtnText">Timeout timer</string>
    <string name="configureBtnText">Configure children</string>
    <string name="tasksBtnText">Task Manager</string>
    <string name="coinFlipTitle">Flip a Coin</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="flip">Flip!</string>
    <string name="emptyMessage">There are no past coin flips!\nTap the + in the top right to add one!</string>
    <string name="btnTextStart">Start</string>
    <string name="btnTextPause">Pause</string>
    <string name="reset">Reset</string>
    <string name="initialZeroValueTimer">00:00</string>
    <string name="timerTextResume">Resume</string>
    <string name="inputMinutesDisplay">Enter minutes</string>
    <string name="set">Set</string>
    <string name="channel_name">notification_channel</string>
    <string name="channel_description">description</string>
    <string name="my_parent_app">My Parent App</string>
    <string name="no_children">No children currently registered.\nTap the + button to add!</string>
    <string name="has_children">Click child to configure!</string>
    <string name="coin">coin</string>
    <string name="history">History</string>
    <string name="click_child_to_configure">Click child to configure!</string>
    <string name="oneMinute">1:00</string>
    <string name="tenMinutes">10:00</string>
    <string name="twoMinutes">2:00</string>
    <string name="threeMinutes">3:00</string>
    <string name="fiveMinutes">5:00</string>
    <string name="aboutTheApp">About the App</string>
    <string name="taskManagerLabel">List of Tasks</string>
    <string name="noTaskMessage">There are no tasks!\nPress + to add tasks.</string>
    <string name="addTaskBtn">addTaskBtn</string>
    <string name="name">Name:</string>
    <string name="clickToChangeImg">To change the image, click on the icon!</string>
    <string name="flipBtn">Flip!</string>
    <string name="noChildFlipBtn">No Child Flip</string>
    <string name="tempName">Temp name</string>
    <string name="defaultTextview">TextView</string>
    <string name="tasksLabel">Tasks</string>
    <string name="take_a_breath">Take A Breath</string>
    <string name="help">Help</string>
    <string name="taskHistory">Task Assignment History</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit Task</string>
    <string name="editTaskNameMsg">Tap the task header above to edit!</string>
    <string name="completeTask">Complete Task</string>
    <string name="deleteTask">Delete Task</string>
    <string name="defaultBreathCount">1</string>
    <string name="breathPlaceholder">Let\'s take n breaths!</string>
    <string name="helpMsgPlaceholder">helpMsg</string>
    <string name="buttonTextPlaceholder">Button</string>
    <string name="taskNamePlaceholder">TextView</string>
    <string name="taskAssignedPlaceholder">TextView</string>
    <string name="timerRateDefault">Timer rate 100%</string>
    <string-array name="choices">
        <item>Heads</item>
        <item>Tails</item>
    </string-array>
    <string-array name="photoOptions">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string-array name="appDevInformation">
        <item><b>Team Name:</b>\nHydrogen</item>
        <item><b>\nDevelopers:</b></item>
        <item>Gurseerat Brar</item>
        <item>Kevin Chen</item>
        <item>Ethan Chou</item>
        <item>Bryan Dang</item>
        <item><u>\nA list of all the images and resources used is linked below:</u></item>
        <item>https://textdoc.co/aGfq3u0jZA4xSXQp</item>
        <item>Code Style Guide found in docs is from CMPT213, Victor Cheung.</item>
    </string-array>
</resources>