<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_bg"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/coinFlipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coinFlipBtnText"
        app:layout_constraintBottom_toTopOf="@+id/timeoutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

    <Button
        android:id="@+id/timeoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeoutBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/configureBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configureBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeoutBtn"
        app:layout_constraintVertical_bias="0.354" />
</androidx.constraintlayout.widget.ConstraintLayout>