<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/twitter_navy_blue">

    <Button
        android:id="@+id/btnStartTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/twitter_blue"
        android:text="@string/btnTextStart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDisplayTimer" />

    <TextView
        android:id="@+id/textDisplayTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginEnd="152dp"
        android:text="@string/initialZeroValueTimer"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="260dp" />

    <EditText
        android:id="@+id/minuteTextInput"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:autofillHints="1"
        android:backgroundTint="@color/white"
        android:hint="@string/inputMinutesDisplay"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textDisplayTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />


    <Button
        android:id="@+id/btnResetTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:backgroundTint="@color/twitter_blue"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartTimer"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnSetTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/twitter_blue"
        android:text="@string/set"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minuteTextInput"
        app:layout_constraintTop_toTopOf="@+id/minuteTextInput" />

    <Button
        android:id="@+id/oneMinBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/twitter_blue"
        android:text="1:00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/threeMinBtn"
        app:layout_constraintEnd_toStartOf="@+id/tenMinBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/twoMinBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/twitter_blue"
        android:text="2:00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/fiveMinBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tenMinBtn" />

    <Button
        android:id="@+id/threeMinBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/twitter_blue"
        android:text="3:00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tenMinBtn"
        app:layout_constraintEnd_toStartOf="@+id/tenMinBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fiveMinBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/twitter_blue"
        android:text="5:00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tenMinBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tenMinBtn" />

    <Button
        android:id="@+id/tenMinBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/twitter_blue"
        android:text="10:00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>