<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/twitter_navy_blue"
    tools:context=".TakeBreathActivity">

    <TextView
        android:id="@+id/breathTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breathPlaceholder"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/breathCountLayout"
        android:layout_width="93dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breathTxt">

        <ImageView
            android:id="@+id/leftArrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toStartOf="@id/breathCount"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_left_24"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/rightArrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintStart_toEndOf="@+id/breathCount"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_right_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/breathCount"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="@string/defaultBreathCount"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/leftArrow"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/breathHelpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/helpMsgPlaceholder"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exhaleCircleBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/exhale_circle"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/breathButton"
        app:layout_constraintEnd_toEndOf="@+id/breathButton"
        app:layout_constraintStart_toStartOf="@+id/breathButton"
        app:layout_constraintTop_toTopOf="@+id/breathButton" />

    <TextView
        android:id="@+id/inhaleCircleBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/inhale_circle"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/breathButton"
        app:layout_constraintEnd_toEndOf="@+id/breathButton"
        app:layout_constraintStart_toStartOf="@+id/breathButton"
        app:layout_constraintTop_toTopOf="@+id/breathButton" />

    <TextView
        android:id="@+id/breathButton"
        android:layout_width="117dp"
        android:layout_height="108dp"
        android:gravity="center"
        android:text="@string/buttonTextPlaceholder"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>