<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/twitter_navy_blue">

    <RadioGroup
        android:id="@+id/headsOrTails"
        android:layout_width="112dp"
        android:layout_height="98dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <Spinner
        android:id="@+id/choosingChildSpinner"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:minHeight="48dp"
        android:popupBackground="@color/darker_navy_blue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextChildSuggestion"
        app:layout_constraintVertical_bias="0.081"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/flipCoinButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/twitter_blue"
        android:text="@string/flipBtn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/emptyFlipBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/nextChildSuggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <ImageView
        android:id="@+id/coin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="44dp"
        android:contentDescription="@string/coin"
        android:src="@drawable/heads"
        app:layout_constraintBottom_toTopOf="@+id/flipCoinButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headsOrTails" />

    <Button
        android:id="@+id/emptyFlipBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/twitter_blue"
        android:text="@string/noChildFlipBtn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
